	PR libfortran/15960 	* configure.ac: Check for finite in libm. 	* libgfortran.h: Define isfinite macro if not defined. 	* intrinsics/c99_functions.c: Use defined(fpclassify) instead of 	HAVE_FPCLASSIFY. 	* io/write.c (write_float): Use isfinite instead of finite. 	* configure, config.h.in: Rebuilt.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@91064 138bc75d-0d04-0410-961f-82ee72b054a4